Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-68185

MacOS font-rendering fallback failing

    XMLWordPrintable

Details

    • macOS

    Description

      Font rendering fallback on MacOS seems to be very poor within Qt, but fine on native applications. Windows and Linux can display:

      (Hilariously, JIRA doesn't let me enter the offending characters here either... check the QML attached)

      with no issue using default system fonts but MacOS fails and displays squares or horizontal lines. Swapping fonts doesn't seem to solve the problem. Displaying the offending string in non-Qt applications on MacOS (textEdit) results in them being displayed correctly, what's going on?

      I have tested in all Qt text editor examples, Controls 2, Controls and Widgets based and on MacOS fails to render the correct glyph. They display correctly in Windows and Linux.

       

      Changing the renderType does not seem to affect the output

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            esabraha Eskil Abrahamsen Blomfeldt
            baz Seb Horsewell
            Votes:
            1 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:

              Gerrit Reviews

                There are no open Gerrit changes