Replace UTF characters that MacOS Qt gets upset with (QTBUG-68185)